--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body {
     font-family: sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .gameboard {
@@ -24,4 +27,12 @@ body {
 p.tile-text {
     margin: 0;
     color: grey;
+}
+
+.restart {
+    padding: 8px;
+    border: 1px solid black;
+    font-size: 16px;
+    background-color: silver;
+    border-radius: 8px;
 }
